; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hid/extr_hid-hyperv.c_mousevsc_free_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hid/extr_hid-hyperv.c_mousevsc_free_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mousevsc_dev = type { i32, %struct.mousevsc_dev*, %struct.mousevsc_dev* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mousevsc_dev*)* @mousevsc_free_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mousevsc_free_device(%struct.mousevsc_dev* %0) #0 {
  %2 = alloca %struct.mousevsc_dev*, align 8
  store %struct.mousevsc_dev* %0, %struct.mousevsc_dev** %2, align 8
  %3 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %2, align 8
  %4 = getelementptr inbounds %struct.mousevsc_dev, %struct.mousevsc_dev* %3, i32 0, i32 2
  %5 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %4, align 8
  %6 = call i32 @kfree(%struct.mousevsc_dev* %5)
  %7 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %2, align 8
  %8 = getelementptr inbounds %struct.mousevsc_dev, %struct.mousevsc_dev* %7, i32 0, i32 1
  %9 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %8, align 8
  %10 = call i32 @kfree(%struct.mousevsc_dev* %9)
  %11 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %2, align 8
  %12 = getelementptr inbounds %struct.mousevsc_dev, %struct.mousevsc_dev* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @hv_set_drvdata(i32 %13, i32* null)
  %15 = load %struct.mousevsc_dev*, %struct.mousevsc_dev** %2, align 8
  %16 = call i32 @kfree(%struct.mousevsc_dev* %15)
  ret void
}

declare dso_local i32 @kfree(%struct.mousevsc_dev*) #1

declare dso_local i32 @hv_set_drvdata(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
